--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -124,8 +124,10 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           volumeMounts:
+            {{- if .Values.config.enabled }}
             - name: config
               mountPath: /etc/alertmanager
+            {{- end }}
             {{- if .Values.configmapReload.extraVolumeMounts }}
             {{- toYaml .Values.configmapReload.extraVolumeMounts | nindent 12 }}
             {{- end }}
